--- a/web/templates/cmdb_asset_detail.html
+++ b/web/templates/cmdb_asset_detail.html
@@ -7,9 +7,10 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/cmdb/server-list.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>  Asset Infomation</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> {{ response.data.server.ipaddress }}</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'cmdb-server-list' %}"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 服务器列表</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'cmdb-asset-detail' response.data.id %}"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> 资产详情 - {{ response.data.server.ipaddress }}</a>
+
         </div>
     </ol>
     <div style="padding: 5px 8px;">
