--- a/web/templates/dashboard_index.html
+++ b/web/templates/dashboard_index.html
@@ -76,16 +76,16 @@
 
             </div>
 
-            <div class="row">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">业务资源利用率统计</h3>
-                    </div>
-                    <div class="panel-body">
-                        <div id="business_count_container" style="height: 280px"></div>
-                    </div>
-                </div>
-            </div>
+{#            <div class="row">#}
+{#                <div class="panel panel-info">#}
+{#                    <div class="panel-heading">#}
+{#                        <h3 class="panel-title">业务资源利用率统计</h3>#}
+{#                    </div>#}
+{#                    <div class="panel-body">#}
+{#                        <div id="business_count_container" style="height: 280px"></div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
 
         </div>
 
@@ -100,17 +100,16 @@
                     <div class="x_content" style="display: block;">
                         <div class="dashboard-widget-content">
                             <ul class="quick-list">
-                                <li><i class="fa fa-calendar-o"></i><a href="#">数据分析系统</a>
+                                <li><i class="fa fa-calendar-o"></i><a href="#">Zabbix 监控系统</a>
                                 </li>
                                 <li><i class="fa fa-bars"></i><a href="#">Jenkins（OM）</a>
                                 </li>
                                 <li><i class="fa fa-bar-chart"></i><a href="#">Jenkins（Dev）</a> </li>
-                                <li><i class="fa fa-line-chart"></i><a href="#">OM-Tools & Monitoring</a>
+                                <li><i class="fa fa-line-chart"></i><a href="#">日志分析系统</a>
                                 </li>
-                                <li><i class="fa fa-bar-chart"></i><a href="#">Zabbix监控</a> </li>
-                                <li><i class="fa fa-line-chart"></i><a href="#">Argus</a>
+                                <li><i class="fa fa-bar-chart"></i><a href="#">数据分析系统</a> </li>
+                                <li><i class="fa fa-line-chart"></i><a href="#">权限管理</a>
                                 </li>
-                                <li><i class="fa fa-area-chart"></i><a href="#">Grafana</a>
                                 </li>
                             </ul>
                         </div>
@@ -121,17 +120,16 @@
                     <div class="x_content" style="display: block;">
                         <div class="dashboard-widget-content">
                             <ul class="quick-list">
-                                <li><i class="fa fa-calendar-o"></i><a href="#">Settings</a>
+                                <li><i class="fa fa-calendar-o"></i><a href="#">内部系统导航</a>
                                 </li>
-                                <li><i class="fa fa-bars"></i><a href="#">Subscription</a>
+                                <li><i class="fa fa-bars"></i><a href="#">内部系统导航</a>
                                 </li>
-                                <li><i class="fa fa-bar-chart"></i><a href="#">Auto Renewal</a> </li>
-                                <li><i class="fa fa-line-chart"></i><a href="#">Achievements</a>
+                                <li><i class="fa fa-line-chart"></i><a href="#">内部系统导航</a>
                                 </li>
-                                <li><i class="fa fa-bar-chart"></i><a href="#">Auto Renewal</a> </li>
-                                <li><i class="fa fa-line-chart"></i><a href="#">Achievements</a>
+                                <li><i class="fa fa-bar-chart"></i><a href="#">内部系统导航</a> </li>
+                                <li><i class="fa fa-line-chart"></i><a href="#">内部系统导航</a>
                                 </li>
-                                <li><i class="fa fa-area-chart"></i><a href="#">Logout</a>
+                                <li><i class="fa fa-area-chart"></i><a href="#">内部系统导航</a>
                                 </li>
                             </ul>
                         </div>
@@ -177,18 +175,25 @@
                             <td>2018-02-21 13:25:58</td>
                             <td>aaron.bu</td>
                         </tr>
-                        <tr>
-                            <td>FPMS</td>
-                            <td>业务架构拓扑图</td>
-                            <td>2018-02-21 13:25:58</td>
-                            <td>aaron.bu</td>
-                        </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
 
         </div>
+
+    <div class="col-md-12">
+        <div class="row">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">业务资源利用率统计</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div id="business_count_container" style="height: 280px"></div>
+                    </div>
+                </div>
+            </div>
+    </div>
 
     </div>
 
