--- a/web/templates/add_project.html
+++ b/web/templates/add_project.html
@@ -12,9 +12,9 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/project.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Project</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Create App</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-project-list' %}" ><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 项目配置</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-add-project' %}" ><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 创建项目</a>
         </div>
     </ol>
     <div class="col-sm-6" style="padding: 20px 8px;">
@@ -24,18 +24,18 @@
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td style="line-height:34px;" align="right">Project Name : *</td>
+                    <td style="line-height:34px;" align="right">项目名称 : *</td>
                     <td>
-                        <input type="text" class="form-control" name="project_name" placeholder="Enter project name...">
+                        <input type="text" class="form-control" name="project_name" placeholder="请输入项目名称...">
                     </td>
                 </tr>
                 <tr>
 
-                    <td style="line-height:34px;" align="right">Business Unit : *</td>
+                    <td style="line-height:34px;" align="right">业务线 : *</td>
                     <td colspan="3">
                         <div class="btn-group btn-group-justified" role="group" aria-label="..." style="display: block">
                             <div id="business_tree_btn" class="btn-group" role="group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-align:left;" onclick="load_tree_data()"><span id="business_select_text">Select Business Unit</span> <span class="caret"></span></button>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-align:left;" onclick="load_tree_data()"><span id="business_select_text">请选择业务线</span> <span class="caret"></span></button>
                                 <ul class="dropdown-menu model-group-list">
                                     <div class="content_wrap">
                                         <div class="zTreeDemoBackground left">
@@ -54,7 +54,7 @@
 
             <div class="form-group">
                 <div class="col-sm-2">
-                    <a type="submit" class="btn btn-primary" onclick="add_project_fn()"><i class="fa fa-check"></i> Create Project</a>
+                    <a type="submit" class="btn btn-primary" onclick="add_project_fn()"><i class="fa fa-check"></i> 创建项目</a>
                 </div>
             </div>
 
