--- a/web/templates/cmdb_idc_list.html
+++ b/web/templates/cmdb_idc_list.html
@@ -9,8 +9,8 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/cmdb/idc-list.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> IDC机房列表</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'cmdb-idc-list' %}"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> IDC机房列表</a>
         </div>
     </ol>
 
