--- a/web/templates/edit_project.html
+++ b/web/templates/edit_project.html
@@ -12,9 +12,9 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/project.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Application</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Create App</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-project-list' %}" ><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 项目配置</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-edit-project' response.data.id %}" ><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 编辑项目 - {{ response.data.name }}</a>
         </div>
     </ol>
     <div class="col-sm-6" style="padding: 20px 8px;">
@@ -24,14 +24,14 @@
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td style="line-height:34px;" align="right">Project Name : *</td>
+                    <td style="line-height:34px;" align="right">项目名称 : *</td>
                     <td>
                         <input type="text" class="form-control" name="project_name" placeholder="Enter project name..." value="{{ response.data.name }}">
                     </td>
                 </tr>
                 <tr>
 
-                    <td style="line-height:34px;" align="right">Business Unit : *</td>
+                    <td style="line-height:34px;" align="right">业务线 : *</td>
                     <td colspan="3">
                         <div class="btn-group btn-group-justified" role="group" aria-label="..." style="display: block">
                             <div id="business_tree_btn" class="btn-group" role="group">
@@ -54,7 +54,7 @@
 
             <div class="form-group">
                 <div class="col-sm-2">
-                    <a class="btn btn-primary" onclick="update_project_app_fn('put', '{{ response.data.id }}')"><i class="fa fa-check"></i> Update Project</a>
+                    <a class="btn btn-primary" onclick="update_project_app_fn('put', '{{ response.data.id }}')"><i class="fa fa-check"></i> 更新项目</a>
                 </div>
             </div>
 
