--- a/web/templates/permission_add.html
+++ b/web/templates/permission_add.html
@@ -8,9 +8,9 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/server.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> User Center</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Url Add</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-permission-list' %}"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 权限管理</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-permission-add' %}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 创建URL配置</a>
         </div>
     </ol>
     <div class="col-sm-6" style="padding: 20px 8px;">
@@ -20,13 +20,13 @@
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td style="line-height:34px;" align="right">Url Name : *</td>
+                    <td style="line-height:34px;" align="right">Url名称 : *</td>
                     <td>
                         <input type="text" class="form-control" name="url_name" placeholder="Enter url name...">
                     </td>
                 </tr>
                 <tr>
-                    <td style="line-height:34px;" align="right">Url Method : *</td>
+                    <td style="line-height:34px;" align="right">Http方法 : *</td>
                     <td>
                         <select class="form-control" name="url_method">
                             <option value="GET">GET</option>
@@ -37,9 +37,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="line-height:34px;" align="right">Memo : </td>
+                    <td style="line-height:34px;" align="right">备注 : </td>
                     <td>
-                        <input type="text" class="form-control" name="url_memo" placeholder="Enter url memo...">
+                        <input type="text" class="form-control" name="url_memo" placeholder="请输入url备注...">
                     </td>
                 </tr>
                 </tbody>
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <div class="col-sm-2">
-                    <a type="submit" class="btn btn-primary" onclick="permission_create_fn()"><i class="fa fa-check"></i> Create Url Permission</a>
+                    <a type="submit" class="btn btn-primary" onclick="permission_create_fn()"><i class="fa fa-check"></i> 创建URL配置</a>
                 </div>
             </div>
 
