--- a/web/templates/project_projectviews.html
+++ b/web/templates/project_projectviews.html
@@ -9,9 +9,9 @@
 
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Dashboard</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/project.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Project</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-projectviews' response.data.id %}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> ProjectViews</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-project-list' %}" ><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 项目配置</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'project-projectviews' response.data.id %}" ><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> 项目视图 - {{ response.data.name }}</a>
         </div>
     </ol>
 
