--- a/web/templates/user_center/add_group.html
+++ b/web/templates/user_center/add_group.html
@@ -12,9 +12,9 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> User Center</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/project.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Groups</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Create Group</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-group-list' %}"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 分组管理</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-add-group' %}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 创建分组</a>
         </div>
     </ol>
     <div class="col-sm-6" style="padding: 20px 8px;">
@@ -24,9 +24,9 @@
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td style="line-height:34px;" align="right">Group Name : *</td>
+                    <td style="line-height:34px;" align="right">分组名称 : *</td>
                     <td>
-                        <input type="text" class="form-control" name="group_name" placeholder="Enter group name...">
+                        <input type="text" class="form-control" name="group_name" placeholder="请输入分组名称...">
                     </td>
                 </tr>
 
@@ -35,7 +35,7 @@
 
             <div class="form-group">
                 <div class="col-sm-2">
-                    <a type="submit" class="btn btn-primary" onclick="add_group_fn()"><i class="fa fa-check"></i> Create Group</a>
+                    <a type="submit" class="btn btn-primary" onclick="add_group_fn()"><i class="fa fa-check"></i> 创建分组</a>
                 </div>
             </div>
 
