--- a/web/templates/user_center/edit_group.html
+++ b/web/templates/user_center/edit_group.html
@@ -12,9 +12,9 @@
 {% block conent %}
     <ol class="breadcrumb" style="margin-bottom: 0;">
         <div class='btn-group btn-group-xs'>
-            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> User Center</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="/user_center/group-list.html"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Groups</a>
-            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Edite Group</a>
+            <a type="button" class="btn btn-default btn-arrow-right btn-arrow-left:before" style="color:#1c5a9c; padding-left:10px" href="{% url 'dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 控制面板</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-group-list' %}"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> 分组管理</a>
+            <a type="button" class="btn btn-default btn-arrow-right" style="color:#1c5a9c;" href="{% url 'user_center-edit-group' response.data.id %}"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 编辑分组 - {{ response.data.name}}</a>
         </div>
     </ol>
     <div class="col-sm-6" style="padding: 20px 8px;">
@@ -24,9 +24,9 @@
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td style="line-height:34px;" align="right">Groupname : *</td>
+                    <td style="line-height:34px;" align="right">分组名称 : *</td>
                     <td>
-                        <input type="text" class="form-control" name="group_name" placeholder="Enter group name..." value="{{ response.data.name}}">
+                        <input type="text" class="form-control" name="group_name" placeholder="请输入分组名称..." value="{{ response.data.name}}">
                     </td>
                 </tr>
 
@@ -37,7 +37,7 @@
 
             <div class="form-group">
                 <div class="col-sm-2">
-                    <a class="btn btn-primary" onclick="update_group_app_fn('put', '{{ response.data.id }}')"><i class="fa fa-check"></i> Update Group</a>
+                    <a class="btn btn-primary" onclick="update_group_app_fn('put', '{{ response.data.id }}')"><i class="fa fa-check"></i> 更新分组</a>
                 </div>
             </div>
 
